[update] Edit an existing page by claude code